@@ -11898,4 +11898,52 @@ int file_is_z88_basic(char *filename)
 
 void util_save_game_config(char *filename)
 {
+  //Sobreescribimos archivos con settings actuales
+  debug_printf (VERBOSE_INFO,"Writing configuration file");
+
+  //Agregamos contenido
+  char config_settings[20000]; //Esto es mas que suficiente
+
+  char buffer_temp[MAX_CONFIG_SETTING]; //Para cadenas temporales
+  //char buffer_temp2[MAX_CONFIG_SETTING]; //Para cadenas temporales
+
+  int indice_string=0;
+
+  int i;
+
+
+  //Al menos generamos una linea en blanco inicial
+                                              ADD_STRING_CONFIG,";Autogenerated autoconfig file");
+
+
+
+  //Y empezamos a meter opciones
+                                              ADD_STRING_CONFIG,"--zoom %d",zoom_x);
+  if (frameskip)                              ADD_STRING_CONFIG,"--frameskip %d",frameskip);
+
+
+
+
+
+
+
+
+
+
+
+    char configfile[PATH_MAX];
+         FILE *ptr_configfile;
+
+     ptr_configfile=fopen(filename,"wb");
+     if (!ptr_configfile) {
+                        debug_printf(VERBOSE_ERR,"Cannot write configuration file %s",filename);
+                        return;
+      }
+
+    fwrite(config_settings, 1, strlen(config_settings), ptr_configfile);
+
+
+      fclose(ptr_configfile);
+
+
 }
