@@ -9,6 +9,7 @@ Added TBBlue/DataGear/MB02 DMA emulation
 Added Beeper Piano Menu
 Added new Z80 TBBlue opcodes and deleted obsolete ones
 Added setting to change Kempston Mouse sensitivity
+Added menu item to create autoconfig files
 
 Improved debugger:
 *Added bitwise operators AND (&), OR (|), XOR (^) when using registers breakpoints/watches
